[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_smooth"
version = "0.1.0"
authors = [{ name = "Kaymal", email = "gutkyle@gmail.com" }]
description = "Apply auto smoothing to a time series data."
readme = "README.md"
license = { file = 'LICENSE' }
requires-python = ">=3.8"
classifiers = [
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = ["pandas", "numpy", "scipy"]

[project.urls]
repository = "https://github.com/kaymal/auto-smooth"

[tool.setuptools]
packages = ["auto_smooth"]
